test-suite/parser/pass/multiple_functions.first
function a() -> Int { return 1; }
function b() -> Int { return 2; }
function c() -> Int { return a() + b(); }
