test-suite/parser/fail/unclosed_paren.first
function f() -> Int {
  return (1 + 2;
}
